--- a/service-discovery.yml
+++ b/service-discovery.yml
@@ -7,7 +7,7 @@ eureka:
   client:
     serviceUrl.defaultZone: http://localhost:8080/eureka
     register-with-eureka: false
-    fetch-registry: false
+    fetch-registry: true
 
 management:
   endpoints:
