--- a/spring-microservice/service-discovery.yml
+++ b/spring-microservice/service-discovery.yml
@@ -5,7 +5,7 @@ eureka:
   instance:
     hostname: localhost
   client:
-    serviceUrl.defaultZone: http://localhost:8080/eureka
+    serviceUrl.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     register-with-eureka: false
     fetch-registry: false
 
