--- a/spring-microservice/customer-service.yml
+++ b/spring-microservice/customer-service.yml
@@ -15,6 +15,7 @@ spring:
 eureka:
   instance:
     instance-id: ${spring.application.name}-${random.value}
+    prefer-ip-address: true
   client:
     serviceUrl.defaultZone: http://localhost:8080/eureka
     registry-fetch-interval-seconds: 5
