--- a/spring-microservice/service-discovery.yml
+++ b/spring-microservice/service-discovery.yml
@@ -4,6 +4,8 @@ server:
 eureka:
   instance:
     hostname: localhost
+  server:
+    enable-self-preservation: false
   client:
     serviceUrl.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     register-with-eureka: false
