--- a/spring-microservice/service-discovery.yml
+++ b/spring-microservice/service-discovery.yml
@@ -6,6 +6,7 @@ eureka:
     hostname: localhost
   server:
     enable-self-preservation: false
+    renewal-percent-threshold: 0.11
   client:
     serviceUrl.defaultZone: http://${eureka.instance.hostname}:${server.port}/eureka/
     register-with-eureka: false
