--- a/spring-microservice/customer-service.yml
+++ b/spring-microservice/customer-service.yml
@@ -23,3 +23,8 @@ eureka:
   client:
     serviceUrl.defaultZone: http://localhost:8080/eureka
     region: default
+
+management:
+  endpoints:
+    web:
+      exposure.include: '*'
