--- a/spring-microservice/service-gateway.yml
+++ b/spring-microservice/service-gateway.yml
@@ -16,5 +16,5 @@ gateway:
 
 eureka:
   client:
-    serviceUrl.defaultZone: http://localhost:8080/eureka
+    serviceUrl.defaultZone: http://${discovery.host}:${discovery.port}/eureka
     region: default
