--- a/spring-microservice/application.yml
+++ b/spring-microservice/application.yml
@@ -3,6 +3,7 @@ spring:
     default-property-inclusion: NON_NULL
 
 server:
+  shutdown: GRACEFUL
   error:
     include-stacktrace: NEVER
 
@@ -11,6 +12,11 @@ logging:
     com.chak.sc: DEBUG
 
 management:
+  endpoint:
+    health:
+      show-details: ALWAYS
+      probes:
+        enabled: true
   endpoints:
     web:
       exposure.include: '*'
